Fixed spacing on header and display on "Previously" footer

--- a/css/post.sass
+++ b/css/post.sass
@@ -88,16 +88,13 @@ aside
   .prev
     h2
       font-size: 100%
-    p, li, hr
+    li, hr
       margin-top: 1em
     li + p,
       margin-top: 0
     em
       color: $mix-color
       white-space: nowrap
-    .recent
-      list-style-type: none
-      margin-left: 0
 
 //-----------------------------------------------------------------------------
 
